Reinstate wait-for-Initialize when Chrome is run in Mash

Mus Views needs to completely block the main thread during
initialization, including any pending tasks. This means
incoming messages on any other pipe will never be dispatched.
If ShellClient::Initialize is blocked, the pipe views is
waiting on will in turn never be able to signal, resulting
in an effective deadlock.

So we need to wait for Initialize before proceeding with the
rest of the main thread setup. This adds a temporary switch
to explicitly opt in to wait-for-Initialize behavior on
MojoShellConnection, and adds that switch when running in mash.

BUG=594636,594852
TEST=views_mus_unittests, mus_ws_unittests, and chrome --mash renders as well as it did before I broke it.

Review URL: https://codereview.chromium.org/1797153002

Cr-Commit-Position: refs/heads/master@{#381182}

Former-commit-id: 27eb4409b17331235123e5e0a6837aa760203816