ui/views/mus/screen_mus.h
@@ -66,7 +66,6 @@ class VIEWS_MUS_EXPORT ScreenMus
   mojo::Binding<mus::mojom::DisplayManagerObserver>
       display_manager_observer_binding_;
   base::ObserverList<gfx::DisplayObserver> observers_;
-  scoped_ptr<base::RunLoop> wait_for_displays_loop_;
 
   DISALLOW_COPY_AND_ASSIGN(ScreenMus);
 };
